# fastapi-boilerplate

./: .gitignore  pyproject.toml
alembic/: env.py
app/api/endpoints/: api.py  users.py
app/crud/: crud_user.py
app/models/: user.py
app/schemas/: user.py
